# Lab_LLVM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Skeleton.cpp  TracePass.cpp  main.in  main.ll  run.sh  stats.txt
hw1/: CMakeLists.txt  main.ll
hw1/src/: log_llvm_ir.cpp  sim.cpp  sim.h  sim.hpp
src/: ast.cpp  ast.h  ast.hpp  lexer.l  main.c  main.cpp  parser.y  sim.cpp  sim.hpp
